fix(probe): make collection order deterministic across JVMs and platforms (CI golden drift)